@@ -3,57 +3,50 @@ package com.jvn.editor.ui;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertFalse;
 
+import com.jvn.fx.testkit.FxToolkit;
+import com.jvn.fx.testkit.FxToolkitExtension;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.util.Base64;
 import java.util.concurrent.Callable;
-import java.util.concurrent.CountDownLatch;
-import java.util.concurrent.FutureTask;
-import java.util.concurrent.TimeUnit;
 import java.util.concurrent.atomic.AtomicInteger;
-import javafx.application.Platform;
+import javafx.scene.Scene;
 import javafx.scene.control.Button;
 import javafx.scene.control.ListView;
-import org.junit.jupiter.api.Assumptions;
-import org.junit.jupiter.api.BeforeAll;
+import javafx.scene.image.Image;
+import javafx.scene.image.ImageView;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
 import org.junit.jupiter.api.io.TempDir;
 
+@ExtendWith(FxToolkitExtension.class)
 class AssetBrowserViewFxTest {
-  private static boolean toolkitAvailable;
-
-  @BeforeAll
-  static void startToolkit() {
-    if (System.getProperty("os.name", "").toLowerCase().contains("linux")
-        && System.getenv().getOrDefault("DISPLAY", "").isBlank()) return;
-    try {
-      CountDownLatch ready = new CountDownLatch(1);
-      Platform.startup(ready::countDown);
-      toolkitAvailable = ready.await(10, TimeUnit.SECONDS);
-    } catch (IllegalStateException alreadyStarted) {
-      toolkitAvailable = true;
-    } catch (Exception unavailable) {
-      toolkitAvailable = false;
-    }
-  }
+  // 1x1 transparent PNG, so JavaFX's Image decoder succeeds and releases its file handle
+  // immediately instead of leaving it open after a failed decode of bogus placeholder bytes,
+  // which raced @TempDir cleanup on Windows.
+  private static final byte[] ONE_PIXEL_PNG = Base64.getDecoder().decode(
+      "iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNk+A8AAQUBAScY42YAAAAASUVORK5CYII=");
 
   @Test
   void selectingOnlyPreviewsAndUseAssetIsExplicit(@TempDir Path project) throws Exception {
-    Assumptions.assumeTrue(toolkitAvailable, "JavaFX toolkit is unavailable in this environment");
     Files.createDirectories(project.resolve("assets/characters"));
-    Files.writeString(project.resolve("assets/characters/hero.png"), "placeholder");
+    Files.write(project.resolve("assets/characters/hero.png"), ONE_PIXEL_PNG);
 
-    runFx(() -> {
-      AssetBrowserView view = new AssetBrowserView();
+    AssetBrowserView view = runFx(() -> {
+      AssetBrowserView v = new AssetBrowserView();
       AtomicInteger uses = new AtomicInteger();
-      view.setOnAssetSelected(path -> uses.incrementAndGet());
-      view.setProjectRoot(project.toFile());
+      v.setOnAssetSelected(path -> uses.incrementAndGet());
+      v.setProjectRoot(project.toFile());
+      new Scene(v, 800, 600);
+      v.applyCss();
+      v.layout();
 
       @SuppressWarnings("unchecked")
-      ListView<Object> assets = (ListView<Object>) view.lookup(".list-view");
+      ListView<Object> assets = (ListView<Object>) v.lookup("#asset-browser-list-view");
       assets.getSelectionModel().select(0);
       assertEquals(0, uses.get(), "browsing must not insert an asset path");
 
-      Button use = view.lookupAll(".button").stream()
+      Button use = v.lookupAll(".button").stream()
           .filter(Button.class::isInstance)
           .map(Button.class::cast)
           .filter(button -> "Use Asset".equals(button.getText()))
@@ -62,13 +55,19 @@ class AssetBrowserViewFxTest {
       assertFalse(use.isDisabled());
       use.fire();
       assertEquals(1, uses.get());
-      return null;
+      return v;
     });
+
+    // The preview thumbnail loads the selected asset's bytes off-thread; wait for it to
+    // finish before the @TempDir cleanup runs, otherwise Windows can still hold the file open.
+    for (int i = 0; i < 40; i++) {
+      Image image = runFx(() -> ((ImageView) view.lookup("#asset-browser-preview-image")).getImage());
+      if (image == null || image.getProgress() >= 1.0) return;
+      Thread.sleep(50);
+    }
   }
 
   private static <T> T runFx(Callable<T> callable) throws Exception {
-    FutureTask<T> task = new FutureTask<>(callable);
-    Platform.runLater(task);
-    return task.get(30, TimeUnit.SECONDS);
+    return FxToolkit.runFx(callable);
   }
 }
